--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 services:
   - type: web
     name: heartbridge-api-backend
-    runtime: python
+    env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
-    envVars:
-      - key: PORT
-        value: 10000
